# 6502asm

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: linux.yml  macos-arm.yml  windows.yml
assembler/: CMakeLists.txt  Makefile  config.ggo  driver.c
assembler/include/: assembler_data.h  fileutil.h  instruction_tables.h  parser.h  parser_directive.h  parser_errors.h  parser_instruction.h  parser_instruction_util.h  parser_label.h  parser_operand.h  parser_util.h
assembler/include/dsa/: ht_label.h
assembler/libs/dsa/: hashtable.c  hashtable.h
assembler/src/: fileutil.c  ht_label.c  instruction_tables.c  main.c  parser.c  parser_directive.c  parser_errors.c  parser_instruction.c  parser_instruction_util.c  parser_label.c  parser_operand.c  parser_util.c
include/: fileutil.h
src/: main.c
tests/: CMakeLists.txt  Makefile  genfiles.py  genfiles.sh
tests/src/: .parser_directive.c.swp  .parser_label.c.swp  fileutil.c  fileutil_support.h  parser.c  parser_directive.c  parser_directive_support.h  parser_instruction_asl.c  parser_instruction_bcc.c  parser_instruction_ora.c  parser_instruction_pha.c  parser_label.c  parser_operand.c  parser_util.c  test_main.c  tests.h
tests/test_data/: basic.asm
